--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<script type="text/javascript">
-			function redirect(){
-			  window.location="http://jaimemf.github.com/youtube-dl-web/";
-			} 
-			setTimeout ("redirect()", 5000);
-		</script>
+
 	</head>
 	<body>
-		<p> Please wait, you'll be redirected in 5 seconds to: 
-			<a href="http://jaimemf.github.com/youtube-dl-web/">http://jaimemf.github.com/youtube-dl-web/.</a>
-		</p>
+		<h1>Hello World!</h1>
 	</body>
 </html>
